--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 .header-color{
-  background: #000000;  /* fallback for old browsers */
+background: #000000;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .landing-grid{
-  background: #000000;  /* fallback for old browsers */
+background: #000000;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
 text-align: center;
 position: fixed;
 top:0;
@@ -16,14 +16,20 @@ width: 100%;
 height: 100%;
 }
 
+.projects-grid{
+  display: flex;
+}
+
 .archana-img{
   height: 250px;
   padding-top: 5em;
+  filter: grayscale(100);
+  
 }
 
 .banner-text{
   background-color: black;
-  opacity: 8;
+  opacity: 0.5;
   width: 75%;
   margin: auto;
   border-radius: 10px;
